--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # main links links
 main:
-  - title: #"Publications"
+  - title: "Publications"
     url: /publications/
 
-  - title: #"Talks"
+  - title: "Talks"
     url: /talks/    
 
   - title: #"Teaching"
@@ -18,5 +18,5 @@ main:
   - title: "CV"
     url: /cv/
     
-  - title: "Guide"
+  - title: #"Guide"
     url: /markdown/
