--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : #"Sungjoon Park"
-  avatar           : "profile.png"
+  avatar           : "photo.jpg"
   bio              : #"Pursuing the PhD in CDS at BU"
   location         : "Boston, MA"
   employer         :
